@@ -360,7 +360,9 @@ def getnodelist(node):
 
 def getstatementrange_ast(lineno, source, assertion=False, astnode=None):
     if astnode is None:
-        content = "\n".join(source.lines)
+        content = str(source)
+        if sys.version_info < (2,6):
+            content += "\n"
         try:
             astnode = compile(content, "source", "exec", 1024)  # 1024 for AST
         except ValueError:
